# fantasy-football

./: .gitignore  bare_minimum_requirements.md  espn_scraper.py  fandraft-cheatsheet-D12 - 2025-2025-08-19.csv  fantasy_players.csv  full_requirements.md  normal_requirements.md  pyproject.toml  temp_clean_csv.py
src/: __init__.py
src/fantasy_football_scraper/: api_client.py  auth.py  constants.py  local_auth.py.example  main.py  processor.py  writer.py
tests/: test_scraper.py
tests/mock_data/: mock_league_data.json  mock_players_data.json
